openmediavault (1.10) stable; urgency=low

  * Update locales.
  * Mantis 0001234: Power button doesn't work.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 08 Jan 2015 14:47:35 +0100

openmediavault (1.9) stable; urgency=low

  * Update locales.
  * Fix 'Gateway 502' error after manual installation of OMV.
  * Adapt OMV to CuBox-i.
  * Mantis 0001233: Add on crontab option @reboot.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 04 Jan 2015 00:10:44 +0100

openmediavault (1.8) stable; urgency=low

  * Update locales.
  * Improve omv-config command. Use --show to display the configuration
    data as JSON from the given XPath.
  * Mantis 0001141: smartd: Reference disks by ATA-/SCSI-Id.
  * Mantis 0001230: Filesystems (EXT4) need to be initialized as 64bit
    filesystems to be able to grow >16TiB. This is not supported on
    32bit systems.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 23 Dec 2014 19:20:45 +0100

openmediavault (1.7) stable; urgency=low

  * Update locales.
  * Display plugins and update packages in one page.
  * Improve PHP RPC backend.
  * Mantis 0001221: Add basic support for Btrfs.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 12 Dec 2014 02:56:34 +0100

openmediavault (1.6) stable; urgency=low

  * Update locales.
  * Display plugins sorted by their XB-Plugin-Section value.
  * Set correct permissions for SSH authorized_keys files.
  * Mantis 0001213: SMB/CIFS guest permissions.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 08 Dec 2014 12:04:25 +0100

openmediavault (1.5) stable; urgency=low

  * Update locales.
  * Modify default grid column settings in S.M.A.R.T. dialog.
  * Prevent the deletion of the shared folders content if another shared
    folder also refers to it.
  * Mantis 0001211: Formatting larger than 16TB arrays. Additional mkfs
    command options for mdadm software RAID devices can be customized via